style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&family=Roboto+Condensed&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&family=Roboto+Condensed:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Poppins:wght@100;300&family=Roboto+Condensed:wght@400;700&display=swap');
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body{
    font-family: Poppins;
    background: no-repeat;
    background-size: cover;
}
.main{
    background: linear-gradient(-45deg, #eaf6ff, #c1e1ff);
    /* backdrop only works with background-color */
    backdrop-filter: blur(50px);
    
}

.sub-main{
    /* background: #343557; */
    background: linear-gradient(-45deg,#292a4a,#343557);
    color:#eaf6ff;
}
#search-div{
    height: 3rem;
    background-color: #ec6f4d;
    min-width: 3rem;
    max-width: 30rem;
    border: solid 0.2rem #384974;
    
}

.search-icon{
    color: #384974;
    
}
body::-webkit-scrollbar {
    display: none !important;
}

#search{
    border: none;
    outline: none;
    height: 2.5rem;
    max-width: 30rem;
    color: #384974;
    font-weight: bold;
}
#search::placeholder{
    color: #384974;
}
#location::first-letter {
    text-transform:capitalize;
}
#descM::first-letter {
    text-transform:capitalize;
}

#desc1::first-letter {
    text-transform:capitalize;
}
#desc2::first-letter {
    text-transform:capitalize;
}
#desc3::first-letter {
    text-transform:capitalize;
}
#desc4::first-letter {
    text-transform:capitalize;
}

#tempM{
    font-size: 10vmax;
    font-family: Oswald, sans-serif;
    font-weight: bold;
}
#location{
    font-size: 4vmax;
    font-weight: bold;
}
#date{
    font-weight: bold;
}
#descM{
    font-weight: bold;
}
#fiveDay::-webkit-scrollbar{
    display: none !important;
}
#fiveDay h1,h3,h4{
    font-weight: bold;
}
#fiveDay h1{
    font-family: 'Roboto Condensed';
    font-size: 3rem;
}
#fiveDay{
    border-radius: 0.5rem;
    font-weight: bold;
    overflow-x: scroll;
    
}
#fiveDayTiles{
    min-width: 10rem;
    max-width: 25rem;
    min-height: 15rem;
    max-height: 20rem;
    margin-right: 1rem;
    text-align: center;
    border-radius: 0.5rem;
}
#fiveDayTiles:hover{
    opacity: 90%;
}
#fiveDayTiles:nth-child(odd){
    background-color: #9aaad3;
    color: #304069;
    
}
#fiveDayTiles:nth-child(even){
    background-color: #8094b3;
    color: #304069;
}
.fa-brands{
    color: #304069;
}

